# telegram_bot_gcp_template

./: README.md  pyproject.toml
.github/workflows/: release.yml  terraform.yml
devops/: Dockerfile.my_bot_name-backend  setup_gcp_project.sh
devops/terraform/: apis.tf  artifact_registry.tf  backend.tf  firestore.tf  main.tf  providers.tf  secret_manager.tf  storage.tf  versions.tf
my_bot_name/: __init__.py  __main__.py  app.py  configurations.py
my_bot_name/connectors/gcp/: bigquery.py  storage.py
my_bot_name/resources/config/: default.yml
my_bot_name/routers/: alive.py  health.py
